Switch NACL_SANDBOX to PNACL_BROWSER_TRANSLATOR, use it consistently.
Replace the build variable NO_SANDBOX with a more clear name:
PNACL_BROWSER_TRANSLATOR. Add a define to allow it to be used
in place of defined(__native_client__) or defined(__pnacl__) when appropriate
inside C++ source.

This allows the subtle distinction between things that are enabled/disabled
because of NaCl's general limitations vs things that are the result of running
inside the PNaCl translator.

This is an incremental step towards building the pnacl tools with
the pnacl tools.

BUG=https://code.google.com/p/naclports/issues/detail?id=130
TEST=None
R=dschuff@chromium.org

Review URL: https://codereview.chromium.org/928373005

--- a/Makefile.rules
+++ b/Makefile.rules
@@ -665,7 +665,9 @@ ifneq ($(HOST_OS), $(filter $(HOST_OS), Cygwin MingW))
   endif
 endif
 
-ifeq ($(NACL_SANDBOX),1)
+#@LOCALMOD-BEGIN
+ifeq ($(PNACL_BROWSER_TRANSLATOR),1)
+  CPP.Flags += -DPNACL_BROWSER_TRANSLATOR
   # NOTE: we specify --noirt to tell the driver that we should link
   # against private (non-stable, non-IRT) libraries for the
   # sandboxed translator.  This could have been specified directly,
@@ -679,6 +681,7 @@ ifeq ($(NACL_SANDBOX),1)
     C.Flags += -fno-builtin-malloc -fno-builtin-calloc -fno-builtin-realloc -fno-builtin-free
   endif
 endif
+# @LOCALMOD-END
 
 #----------------------------------------------------------
 # Options To Invoke Tools
