--- a/lib/Makefile
+++ b/lib/Makefile
@@ -14,9 +14,11 @@ PARALLEL_DIRS := IR AsmParser Bitcode Analysis Transforms CodeGen Target \
                  ExecutionEngine Linker LTO MC Object Option DebugInfo   \
                  IRReader LineEditor ProfileData
 
-ifeq ($(NACL_SANDBOX),1)
+# @LOCALMOD-BEGIN
+ifeq ($(PNACL_BROWSER_TRANSLATOR),1)
   PARALLEL_DIRS := $(filter-out Archive Linker, \
                 $(PARALLEL_DIRS))
 endif
+# @LOCALMOD-END
 
 include $(LEVEL)/Makefile.common
