--- a/utils/Makefile
+++ b/utils/Makefile
@@ -11,7 +11,8 @@ LEVEL = ..
 PARALLEL_DIRS := FileCheck TableGen PerfectShuffle count fpcmp llvm-lit not \
                  unittest
 
-ifeq ($(NACL_SANDBOX),1)
+# @LOCALMOD-BEGIN
+ifeq ($(PNACL_BROWSER_TRANSLATOR),1)
   # In sandboxed mode, just build the bare minimum
   # Note: TableGen is usually built twice: 
   #       * once with host compiler
@@ -19,6 +20,7 @@ ifeq ($(NACL_SANDBOX),1)
   #  Here we just disable that second build
   PARALLEL_DIRS := 
 endif
+# @LOCALMOD-END
 
 EXTRA_DIST := check-each-file codegen-diff countloc.sh \
               DSAclean.py DSAextract.py emacs findsym.pl GenLibDeps.pl \
