Defines munger for bitcode compression.
Refactors pnacl-bccompress to define a (library) class
NaClBitcodeCompressor to compress a buffer containing bitcode.

Also fixes several small bugs in the bitcode munger
associated with processing abbreviations.

Adds unit test associated with bug: Assert fired when compressing pex.

BUG= https://code.google.com/p/nativeclient/issues/detail?id=4104
R=jvoung@chromium.org

Review URL: https://codereview.chromium.org/959973002

--- a/unittests/Bitcode/CMakeLists.txt
+++ b/unittests/Bitcode/CMakeLists.txt
@@ -16,9 +16,11 @@ add_llvm_unittest(BitcodeTests
   NaClAbbrevTrieTest.cpp
   NaClBitReaderTest.cpp
   NaClBitstreamReaderTest.cpp
+  NaClCompressTests.cpp
   NaClObjDumpTest.cpp
   NaClObjDumpTypesTest.cpp
   NaClParseTypesTest.cpp
   NaClParseInstsTest.cpp
+  BitReaderTest.cpp
   NaClTextFormatterTest.cpp
   )
