--- a/lib/Bitcode/NaCl/Analysis/CMakeLists.txt
+++ b/lib/Bitcode/NaCl/Analysis/CMakeLists.txt
@@ -11,6 +11,7 @@ add_llvm_library(LLVMNaClBitAnalysis
   NaClBitcodeSubblockDist.cpp
   NaClBitcodeValueDist.cpp
   NaClAnalyzerBlockDist.cpp
+  NaClCompress.cpp
   NaClCompressBlockDist.cpp
   NaClCompressCodeDist.cpp
   NaClObjDumpStream.cpp
