--- a/unittests/Bitcode/CMakeLists.txt
+++ b/unittests/Bitcode/CMakeLists.txt
@@ -13,6 +13,7 @@ set(LLVM_LINK_COMPONENTS
 add_llvm_unittest(BitcodeTests
   BitReaderTest.cpp
   BitstreamReaderTest.cpp
+  NaClAbbrevErrorTests.cpp
   NaClAbbrevTrieTest.cpp
   NaClBitReaderTest.cpp
   NaClBitstreamReaderTest.cpp
