Add Subzero to the list of external projects for cmake.
This requires subzero and toolchain_build changes to take effect, and
is otherwise harmless.

BUG= none
R=jfb@chromium.org, mtrofin@chromium.org

Review URL: https://codereview.chromium.org/998753002

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -89,6 +89,7 @@ endif()
 
 add_llvm_external_project(clang)
 add_llvm_external_project(llgo)
+add_llvm_external_project(subzero) # LOCALMOD
 
 if( NOT LLVM_INCLUDE_TOOLS STREQUAL "bootstrap-only" )
   add_llvm_external_project(lld)
