Ensure globals marked as "used" are PNaCl - compliant.
Globals marked as "used" (e.g. __attribute((used))__) are correctly
ignored by the internalize pass. PNaCl ABI compliance requires all
globals be marked internal. In such scenarios - whole, single program -
marking all globals as internal would be correct. The new pass does so.

4049: globals marked as "used" & pnacl abi compliance

Using IRBuilder

patch from issue 992493002 at patchset 140001 (http://crrev.com/992493002#ps140001)

BUG= https://code.google.com/p/nativeclient/issues/detail?id=4049
R=jfb@chromium.org

Review URL: https://codereview.chromium.org/1015553002

--- a/lib/Transforms/NaCl/CMakeLists.txt
+++ b/lib/Transforms/NaCl/CMakeLists.txt
@@ -23,6 +23,7 @@ add_llvm_library(LLVMNaClTransforms
   GlobalCleanup.cpp
   GlobalizeConstantVectors.cpp
   InsertDivideCheck.cpp
+  InternalizeUsedGlobals.cpp
   PNaClABISimplify.cpp
   PNaClSjLjEH.cpp
   PromoteI1Ops.cpp
