Separate StripAttribute from NormalizeAlignment
Emscripten only wants to strip attributes, but doesn't want to normalize
alignment. Allow this usecase by making it a separate pass.

R=stichnot@chromium.org, azakai@mozilla.com
BUG= https://code.google.com/p/nativeclient/issues/detail?id=4102
TEST= make check
TEST= ./scons bitcode=1 small_tests medium_tests large_tests

Review URL: https://codereview.chromium.org/1047253002

--- a/lib/Transforms/NaCl/CMakeLists.txt
+++ b/lib/Transforms/NaCl/CMakeLists.txt
@@ -25,6 +25,7 @@ add_llvm_library(LLVMNaClTransforms
   GlobalizeConstantVectors.cpp
   InsertDivideCheck.cpp
   InternalizeUsedGlobals.cpp
+  NormalizeAlignment.cpp
   PNaClABISimplify.cpp
   PNaClSjLjEH.cpp
   PromoteI1Ops.cpp
