--- a/tools/bugpoint/CMakeLists.txt
+++ b/tools/bugpoint/CMakeLists.txt
@@ -14,6 +14,7 @@ set(LLVM_LINK_COMPONENTS
   NaClAnalysis
   NaClBitReader
   NaClTransforms
+  JSBackend
   # @LOCALMOD-END
   ObjCARCOpts
   ScalarOpts
