--- a/tools/opt/CMakeLists.txt
+++ b/tools/opt/CMakeLists.txt
@@ -13,6 +13,7 @@ set(LLVM_LINK_COMPONENTS
   NaClBitReader
   NaClTransforms
   MinSFITransforms
+  JSBackend
   # @LOCALMOD-END
   InstCombine
   Instrumentation
