--- a/lib/Transforms/NaCl/CMakeLists.txt
+++ b/lib/Transforms/NaCl/CMakeLists.txt
@@ -40,6 +40,13 @@ add_llvm_library(LLVMNaClTransforms
   SimplifyStructRegSignatures.cpp
   StripAttributes.cpp
   StripMetadata.cpp
+  # Emscripten files:
+  ExpandI64.cpp
+  LowerEmAsyncify.cpp
+  LowerEmExceptionsPass.cpp
+  LowerEmSetjmp.cpp
+  NoExitRuntime.cpp
+  # Emscripten files end.
   )
 
 add_dependencies(LLVMNaClTransforms intrinsics_gen)
