Fix another layering issue
ExpandInsertExtractElement should have stayed in lib/Transforms/NaCl for now
even though it's only used by JSBackend. We can probably fix this more cleanly
and correctly keep the pass to the backend, but this will at least unblock the
build for now and may make it easier to merge.

R=dschuff@chromium.org, azakai@mozilla.com
BUG= https://code.google.com/p/nativeclient/issues/detail?id=4102
TEST= failing build

Review URL: https://codereview.chromium.org/1051283003

--- a/lib/Transforms/NaCl/CMakeLists.txt
+++ b/lib/Transforms/NaCl/CMakeLists.txt
@@ -42,6 +42,7 @@ add_llvm_library(LLVMNaClTransforms
   StripMetadata.cpp
   # Emscripten files:
   ExpandI64.cpp
+  ExpandInsertExtractElement.cpp
   LowerEmAsyncify.cpp
   LowerEmExceptionsPass.cpp
   LowerEmSetjmp.cpp
