Silence ccache-induced warnings about unused arguments.
This applies only to the cmake build.

In some people's build environments (but unfortunately not mine), setting the CCACHE_CPP2 envvar is not sufficient to get rid of the spurious "unused argument" warnings.  This turns into an actual problem when we compile with -Werror.

BUG= none
R=jfb@chromium.org

Review URL: https://codereview.chromium.org/1057023002

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,7 @@ option(SYSTEM_HAS_CCACHE "Use ccache for building" OFF)
 if(SYSTEM_HAS_CCACHE)
   set_property(GLOBAL PROPERTY RULE_LAUNCH_COMPILE ccache)
   set(ENV(CCACHE_CPP2) "yes")
+  add_compile_options(-Qunused-arguments)
 endif()
 # @LOCALMOD-END
 
