--- a/lib/Bitcode/NaCl/TestUtils/CMakeLists.txt
+++ b/lib/Bitcode/NaCl/TestUtils/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_llvm_library(LLVMNaClBitTestUtils
   NaClBitcodeMunge.cpp
+  NaClBitcodeMungeUtils.cpp
   )
 add_dependencies(LLVMNaClBitTestUtils intrinsics_gen)
