Add abilities to generate bitcode buffers from munged bitcode.
This CL adds capabilities to read/write a munged list of bitcode
records.

BUG=None
R=jvoung@chromium.org

Review URL: https://codereview.chromium.org/1113023005

--- a/unittests/Bitcode/CMakeLists.txt
+++ b/unittests/Bitcode/CMakeLists.txt
@@ -19,6 +19,7 @@ add_llvm_unittest(BitcodeTests
   NaClBitstreamReaderTest.cpp
   NaClCompressTests.cpp
   NaClMungedBitcodeTest.cpp
+  NaClMungedIoTest.cpp
   NaClObjDumpTest.cpp
   NaClObjDumpTypesTest.cpp
   NaClParseTypesTest.cpp
