Harden writer of munged bitcode for fuzzing
Hardens the writer of munged bitcode. Does this by adding error
recovery that guarantees the bitstream writer will not fail on
assertions.

Also cleans up error recovery in general and adds tests to show what
errors are reported by the writer, as well as what error recovery is
applied.

BUG= https://code.google.com/p/nativeclient/issues/detail?id=4169
R=jvoung@chromium.org

Review URL: https://codereview.chromium.org/1139673004

--- a/unittests/Bitcode/CMakeLists.txt
+++ b/unittests/Bitcode/CMakeLists.txt
@@ -13,13 +13,13 @@ set(LLVM_LINK_COMPONENTS
 add_llvm_unittest(BitcodeTests
   BitReaderTest.cpp
   BitstreamReaderTest.cpp
-  NaClAbbrevErrorTests.cpp
   NaClAbbrevTrieTest.cpp
   NaClBitReaderTest.cpp
   NaClBitstreamReaderTest.cpp
   NaClCompressTests.cpp
   NaClMungedBitcodeTest.cpp
   NaClMungedIoTest.cpp
+  NaClMungedWriteErrorTests.cpp
   NaClObjDumpTest.cpp
   NaClObjDumpTypesTest.cpp
   NaClParseTypesTest.cpp
